--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+header {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
