--- a/style.css
+++ b/style.css
@@ -3,13 +3,18 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-.header {
+/*.header {
   padding: 60px;
   text-align: center;
   background: #1abc9c;
   color: white;
   font-size: 30px;
-}
+}*/
 .a.header:link {
 	text-decoration:none;
+	padding: 60px;
+  	text-align: center;
+  	background: #1abc9c;
+  	color: white;
+  	font-size: 30px;
 }
