--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   color: white;
   font-size: 30px;
 }*/
-a.header:link {
+.a.header:link {
 	text-decoration:none;
 	padding: 60px;
   	text-align: center;
