--- a/style.css
+++ b/style.css
@@ -3,17 +3,13 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-/*.header {
+.header {
   padding: 60px;
   text-align: center;
   background: #1abc9c;
   color: white;
   font-size: 30px;
 }
-.header a:link {
-	text-decoration:none;
-}
-*/
 a.header:link { 
 	text-decoration:none;
 }
