--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
 	margin: 0;
 	padding: 0;
@@ -10,6 +11,5 @@
   color: white;
   font-size: 30px;
 }
-.a.header:link { 
+a.header:link {
 	text-decoration:none;
-}
