--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-*{
+/**{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -13,3 +13,19 @@
 }
 a.header:link {
 	text-decoration:none;
+*/
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+header {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
+a:link {
+	text-decoration:none;
+}
