--- a/style.css
+++ b/style.css
@@ -20,14 +20,27 @@ a.header:link {
 	box-sizing: border-box;
 }
 header {
-  padding: 60px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-  font-size: 30px;
+	padding: 60px;
+	text-align: center;
+	background: #1abc9c;
+	color: white;
+	font-size: 30px;
+	margin:10px;
 }
 a:link {
 	text-decoration:none;
+}
+
+a:visited{
+	text-decoration:none;
+}
+
+a:link{
+	color: black;
+}
+a:hover{
+	background-color: #ddd;
+  	color: black;
 }
 
 body{
