--- a/style.css
+++ b/style.css
@@ -76,6 +76,13 @@ h3{
 	text-align: center;
 	margin-left:20px;
 }
+h4{
+	color: #081F1F;
+	font-family: Georgia, serif;
+	font-size: 35px;
+	vertical-align: middle;
+	margin-left:20px;
+}
 
 p{
 	color: #081F1F;
