--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
 	color: white;
 	font-size: 30px;
 	margin-left:20px;
-	position:fixed:
+	position:fixed;
 }
 a:link {
 	text-decoration:none;
