--- a/style.css
+++ b/style.css
@@ -108,5 +108,7 @@ div.reccomendations {
 	color: white;
 	font-size: 20px;
 	margin-left:20px;
+	margin-bottom:20px;
+	border-radius: 20px;
 	display:table;
 }
