--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a.header:link {
 header {
 	padding: 60px;
 	text-align: center;
-	background: #1abc9c;
+	background: #669999;
 	color: white;
 	font-size: 30px;
 	margin-left:20px;
@@ -112,4 +112,10 @@ div.reccomendations {
 	margin-bottom:20px;
 	border-radius: 20px;
 	display:table;
+}
+
+.footer {
+  padding: 20px;
+  text-align: center;
+  background-color: #669999;
 }
