--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
 	padding: 60px;
 	text-align: center;
 	background: #669999;
-	color: white;
+	color: #003333;
 	font-size: 30px;
 	margin-left:20px;
 	position:fixed;
