--- a/style.css
+++ b/style.css
@@ -114,6 +114,20 @@ div.reccomendations {
 	display:table;
 }
 
+div.boxes{
+	width: 48%;
+	background-color: #E0F2F2;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	margin-bottom: 25px;
+	margin-left: 15px;
+	float: left;
+}
+
+div.container{
+	text-align: center;
+	padding: 10px 20px;
+}
+
 .footer {
   padding: 20px;
   text-align: center;
