--- a/style.css
+++ b/style.css
@@ -92,22 +92,22 @@ p{
 	margin-right: 20px;
 	margin-left: 20px;
 }
-div.reviews {
+div.box {
 	background: #92B0A3;
 	margin-left:20px;
 	margin-bottom:30px;
 	border-radius:20px;
-	width: 300px;
-	height: 100px; 
+	width: 48%;
+	float: left;
 }
-div.reccomendations {
+/*div.reccomendations {
 	background: #92B0A3;
 	margin-left:20px;
 	margin-bottom:30px;
 	border-radius: 20px;
 	width: 300px;
-	height: 100px; 
-}
+	height: 100px;
+}*/
 
 
 .footer {
