--- a/style.css
+++ b/style.css
@@ -1,19 +1,5 @@
 
-/**{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-.header {
-  padding: 60px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-  font-size: 30px;
-}
-a.header:link {
-	text-decoration:none;
-*/
+
 *{
 	margin: 0;
 	padding: 0;
@@ -92,22 +78,25 @@ p{
 	margin-right: 20px;
 	margin-left: 20px;
 }
-div.box {
+
+div.reviews {
+	padding: 60px;
 	background: #92B0A3;
 	margin-left:20px;
 	margin-bottom:30px;
 	border-radius:20px;
-	width: 48%;
-	float: left;
+	width: 300px;
 }
-/*div.reccomendations {
+div.reccomendations {
+	padding: 60px;
+	text-align: left;
 	background: #92B0A3;
+	margin-left:70px;
 	margin-left:20px;
 	margin-bottom:30px;
 	border-radius: 20px;
 	width: 300px;
-	height: 100px;
-}*/
+}
 
 
 .footer {
