--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ header {
 	background: #669999;
 	color: #003333;
 	font-size: 30px;
-	margin-left:20px;
-	position:fixed;
+	margin-left:30px;
+	position:sticky;
 }
 a:link {
 	text-decoration:none;
