--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-header {
+/*header {
 	padding: 60px;
 	text-align: center;
 	background: #669999;
@@ -32,6 +32,35 @@ a:hover{
 a.active {
 	background-color: #ddd;
 	color: black;
+}
+*/
+.header {
+  overflow: hidden;
+  background-color: #0D4D4D;
+  position: sticky;
+  top: 0;
+  left: 0;
+}
+
+
+.header a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: #ddd;
+  color: black;
 }
 
 body{
