--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a.active {
 */
 .header {
   overflow: hidden;
-  background-color: #0D4D4D;
+  background-color: #547289;
   position: sticky;
   top: 0;
   left: 0;
