--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ div.reviews {
 	height: 500px;
 	float: left;
 }
-div.reccomendations {
+div.recommendations {
 	background: #92B0A3;
 	margin-left:20px;
 	margin-bottom:30px;
