--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ a.active {
 */
 
 .top {
-  background-color: #8B9AA6;
-  padding: 15px;
+	background-color: #8B9AA6;
+	padding: 15px;
+	text-decoration:none;
 }
 
 .header {
