--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a.active {
 */
 
 .top {
-	background-color: #8B9AA6;
+	background-color: #9A9AB4;
 	padding: 15px;
 }
 
@@ -158,5 +158,5 @@ form{
 .footer {
   padding: 20px;
   text-align: center;
-  background-color: #8B9AA6;
+  background-color: #9A9AB4;
 }
