--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a.active {
 */
 
 .top {
-	background-color: #9A9AB4;
+	background-color: #A7AFC2;
 	padding: 15px;
 }
 
@@ -159,5 +159,5 @@ form{
 .footer {
   padding: 20px;
   text-align: center;
-  background-color: #9A9AB4;
+  background-color: #A7AFC2;
 }
