--- a/style.css
+++ b/style.css
@@ -48,29 +48,37 @@ a.active {
   overflow: hidden;
   background-color: #547289;
   position: sticky;
-  top: 0;
-  left: 0;
 }
 
 
 .header a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 12px;
+	text-decoration: none;
+	font-size: 18px;
+	line-height: 25px;
+	border-radius: 4px;
+}
+
+.header a.logo{
+	font-size: 25px;
+	font-weight: bold;
 }
 
 
 .header a:hover {
-  background-color: #ddd;
-  color: black;
+	background-color: #ddd;
+	color: black;
 }
 
 .header a.active {
-  background-color: #ddd;
-  color: black;
+	background-color: #ddd;
+	color: black;
+}
+.header-right{
+	float: right;
 }
 
 body{
