--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a.active {
 	font-weight: bold;
 }
 
-.header a:visited{
+.header-right a:visited{
 	text-decoration:none;
 	color:black;
 }
@@ -68,12 +68,12 @@ a.active {
 	text-decoration:none;
 }
 
-.header a:hover {
+.header-right a:hover {
 	background-color: #ddd;
 	color: black;
 }
 
-.header a.active {
+.header-right a.active {
 	background-color: #ddd;
 	color: black;
 }
