--- a/style.css
+++ b/style.css
@@ -154,8 +154,8 @@ div.popImage {
 	margin-bottom:20px;
 	margin-top: 20px;
 	border-radius: 20px;
-	width: 48%;
-	height: 300px;
+	width: 100%;
+	height: auto;
 	float: left;
 	background-image: url("https://static01.nyt.com/images/2020/10/20/science/30TB-PENGUINS04/30TB-PENGUINS04-mediumSquareAt3X.jpg");
 }
