--- a/style.css
+++ b/style.css
@@ -154,10 +154,11 @@ div.popImage {
 	margin-bottom:20px;
 	margin-top: 20px;
 	border-radius: 20px;
-	width: 100%;
-	height: auto;
+	width: 48%;
+	height: 300px;
 	float: left;
 	background-image: url("https://static01.nyt.com/images/2020/10/20/science/30TB-PENGUINS04/30TB-PENGUINS04-mediumSquareAt3X.jpg");
+	backgound-size: contain, cover;
 }
 div.text{
 	text-align: center;
