--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ div.popImage {
 	margin-top: 20px;
 	border-radius: 20px;
 	width: 48%;
-	height: 300px;
+	height: auto;
 	float: left;
 	background-image: url("https://static01.nyt.com/images/2020/10/20/science/30TB-PENGUINS04/30TB-PENGUINS04-mediumSquareAt3X.jpg");
 	backgound-size: contain, cover;
