--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a.active {
 
 .header a {
 	float: left;
-	color: black;
+	color: yellow;
 	text-align: center;
 	padding: 12px;
 	text-decoration: none;
@@ -149,7 +149,6 @@ div.recommendations {
 	float: left;
 }
 div.popImage {
-	background: #92B0A3;
 	margin-left:20px;
 	margin-bottom:20px;
 	margin-top: 20px;
@@ -158,7 +157,7 @@ div.popImage {
 	height: auto;
 	float: left;
 	background-image: url("https://static01.nyt.com/images/2020/10/20/science/30TB-PENGUINS04/30TB-PENGUINS04-mediumSquareAt3X.jpg");
-	backgound-size: contain, cover;
+	/*backgound-size: contain, cover;*/
 }
 div.text{
 	text-align: center;
