--- a/style.css
+++ b/style.css
@@ -162,6 +162,17 @@ div.text{
   	padding: 10px 20px;
 }
 
+div.popArtist{
+	background: #92B0A3;
+	margin-left:20px;
+	margin-bottom:20px;
+	margin-top: 20px;
+	border-radius: 20px;
+	width: 74%;
+	height: 300px;
+	float: left;
+}
+
 .clear:after{
 	content: "";
 	display: table;
