--- a/style.css
+++ b/style.css
@@ -172,6 +172,11 @@ div.popArtist{
 	height: 300px;
 	float: left;
 }
+div.popImage img{
+	width:100%;
+	height: 350px;
+	object-fit: cover;
+}
 
 .clear:after{
 	content: "";
