--- a/style.css
+++ b/style.css
@@ -172,8 +172,8 @@ div.popArtist{
 	float: left;
 }
 div.popImage img{
-	width:24%;
-	height: 350px;
+	width:100%;
+	height: auto;
 	object-fit: cover;
 	border-radius: 20px;
 }
