--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ div.popImage {
 	margin-bottom:20px;
 	margin-top: 20px;
 	width: 24%;
-	height: auto;
+	height: 275;
 	float: left;
 	/*backgound-size: contain, cover;*/
 }
@@ -169,7 +169,7 @@ div.popArtist{
 	margin-top: 20px;
 	border-radius: 20px;
 	width: 70%;
-	height: 300px;
+	height: 275px;
 	float: left;
 }
 div.popImage img{
