--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ div.popImage {
 	margin-bottom:20px;
 	margin-top: 20px;
 	width: 24%;
-	height: 275;
+	height: 275px;
 	float: left;
 	/*backgound-size: contain, cover;*/
 }
