--- a/style.css
+++ b/style.css
@@ -128,6 +128,14 @@ p{
 	margin-left: 20px;
 }
 
+h5{
+	color: #081F1F;
+	font-family: Georgia, serif;
+	font-size: 30px;
+	padding: 20px;
+	margin-left:20px;
+}
+
 div.reviews {
 	background: #92B0A3;
 	margin-left:20px;
