--- a/style.css
+++ b/style.css
@@ -128,7 +128,11 @@ h5{
 	margin-left:20px;
 }
 
-h5:visited{
+.artist a{
+	text-decoration: none;
+}
+
+.artist a:visited{
 	text-decoration:none;
 	color:black;
 }
