--- a/style.css
+++ b/style.css
@@ -128,6 +128,14 @@ h5{
 	margin-top: 25px;
 }
 
+h6{
+	color: #081F1F;
+	font-family: Georgia, serif;
+	font-size: 15px;
+	text-align: left;
+	margin-left:20px;
+}
+
 .artist a{
 	text-decoration: none;
 }
