--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a.active {
 
 .header a {
 	float: left;
-	color: black;
+	color: yellow;
 	text-align: center;
 	padding: 12px;
 	text-decoration: none;
@@ -147,7 +147,7 @@ h6{
 	font-size: 15px;
 	text-align: left;
 	margin-left:20px;
-	word-wrap: break-word
+	word-wrap: break-word;
 }
 
 .artist a{
