--- a/style.css
+++ b/style.css
@@ -152,6 +152,11 @@ h6{
 
 .artist a{
 	text-decoration: none;
+	color: #081F1F;
+	font-family: Georgia, serif;
+	font-size: 30px;
+	margin-left:20px;
+	margin-top: 25px;
 }
 
 .artist a:visited{
