--- a/style.css
+++ b/style.css
@@ -156,7 +156,8 @@ h6{
 	font-family: Georgia, serif;
 	font-size: 30px;
 	margin-left:20px;
-	margin-top: 25px;
+	margin-top: 30px;
+	border-radius: 4px;
 }
 
 .artist a:visited{
