--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ div.popImage {
 div.artistSection{
 	margin-left:20px;
 	margin-top: 30px;
-	padding:300px;
+	display: inline-block;
 }
 
 div.text{
