--- a/style.css
+++ b/style.css
@@ -239,6 +239,28 @@ div.text p{
 	line-height: 1.5;
 }
 
+div.text ui{
+	text-align: left;
+	line-height: 1.5;
+}
+div.text li{
+	text-align: left;
+	line-height: 1.5;
+}
+
+div.songs{
+	background: #92B0A3;
+	margin-left:20px;
+	margin-right:20px;
+	margin-bottom:20px;
+	margin-top: 20px;
+	border-radius: 20px;
+	width: 100%;
+	height: 400px;
+	float: left;
+	display: inline-block;
+}
+
 div.popArtist{
 	background: #92B0A3;
 	margin-left:20px;
