--- a/style.css
+++ b/style.css
@@ -239,13 +239,15 @@ div.text p{
 	line-height: 1.5;
 }
 
-div.text ui{
+div.text ul{
 	text-align: left;
 	line-height: 1.5;
+	margin-left: 20px;
 }
 div.text li{
 	text-align: left;
 	line-height: 1.5;
+	margin-left: 25px;
 }
 
 div.songs{
@@ -256,7 +258,7 @@ div.songs{
 	margin-top: 20px;
 	border-radius: 20px;
 	width: 70%;
-	height: 400px;
+	height: 450px;
 	float: left;
 	display: inline-block;
 }
