--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ a.active {
 	color: black;
 }
 .footer-right{
-	float: right;
+	float: left;
 	display: inline-block;
 	margin-bottom: 10px;
 	margin-top: 10px;
