--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ a.active {
 	display: inline-block;
 	margin-bottom: 10px;
 	margin-top: 10px;
+	padding: 10px 20px;
 }
 
 
@@ -103,6 +104,7 @@ a.active {
 	display: inline-block;
 	margin-bottom: 10px;
 	margin-top: 10px;
+	padding: 10px 20px;
 }
 
 
