--- a/style.css
+++ b/style.css
@@ -338,7 +338,8 @@ form{
 
 div.footer {
 	padding: 60px;
-	overflow: hidden;
+	left:0;
+	bottom:0;
 	background-color: #99B0C1;
 	position: sticky;
 }
