--- a/style.css
+++ b/style.css
@@ -340,6 +340,6 @@ div.footer {
 	padding: 60px;
 	left:0;
 	bottom:0;
-	background-color: #99B0C1;
+	background-color: white;
 	position: sticky;
 }
