--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ a.active {
 	text-decoration:none;
 }
 
-.header-right a:hover {
+/*.header-right a:hover {
 	background-color: #ddd;
 	color: black;
 }
@@ -92,7 +92,7 @@ a.active {
 	margin-bottom: 10px;
 	margin-top: 10px;
 	padding: 10px 20px;
-}
+}*/
 
 
 .footer-left a.active {
@@ -114,11 +114,11 @@ body{
 	position: relative;
 }
 
-body::after {
+/*body::after {
   content: '';
   display: block;
   height: 60px; 
-}
+}*/
 
 h1{
 	color: #081F1F;
