--- a/style.css
+++ b/style.css
@@ -252,11 +252,12 @@ div.artistSection{
 
 div.text{
 	text-align: center;
-  	padding: 10px 20px;
-	border-radius: 8px;
+  	padding: 10px 20px;	
 }
 .text a{
 	text-decoration: none;
+	border-radius: 8px;
+	line-height: 1.5;
 }
 
 .text a:visited{
