--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ div.text{
 	color: black;
 }
 
-div.text p{
+/*div.text p{
 	text-align: left;
 	line-height: 1.5;
 	border-radius: 7px;
@@ -284,7 +284,7 @@ div.text p{
 .text p:hover{
 	background-color: #ddd;
 	color: black;
-}
+}*/
 
 div.text ul{
 	text-align: left;
