--- a/style.css
+++ b/style.css
@@ -250,6 +250,42 @@ div.artistSection{
 	display: inline-block;
 }*/
 
+div.text2{
+  	padding: 10px 20px;	
+}
+.text2 a{
+	text-decoration: none;
+	border-radius: 7px;
+	line-height: 2;
+	padding: 10px;
+}
+
+.text2 a:visited{
+	text-decoration:none;
+	color:black;
+}
+
+.text2 a:hover{
+	background-color: #ddd;
+	color: black;
+}
+
+div.text2 p{
+	text-align: left;
+	line-height: 1.5;
+	border-radius: 7px;
+}
+
+.text2 p:visited{
+	text-decoration:none;
+	color:black;
+}
+
+.text2 p:hover{
+	background-color: #ddd;
+	color: black;
+}
+
 div.text{
   	padding: 10px 20px;	
 }
@@ -270,21 +306,12 @@ div.text{
 	color: black;
 }
 
-/*div.text p{
+div.text p{
 	text-align: left;
 	line-height: 1.5;
 	border-radius: 7px;
 }
 
-.text p:visited{
-	text-decoration:none;
-	color:black;
-}
-
-.text p:hover{
-	background-color: #ddd;
-	color: black;
-}*/
 
 div.text ul{
 	text-align: left;
