--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a.active {
 
 .header a {
 	float: left;
-	color: black;
+	color: yellow;
 	text-align: center;
 	padding: 12px;
 	text-decoration: none;
@@ -257,7 +257,7 @@ div.text2{
 	text-decoration: none;
 	border-radius: 7px;
 	line-height: 1.5;
-	padding: 30px;
+	padding: 25px;
 }
 
 .text2 a:visited{
@@ -272,7 +272,7 @@ div.text2{
 
 div.text2 p{
 	text-align: left;
-	border-radius: 8px;
+	border-radius: 6px;
 }
 
 .text2 p:visited{
