--- a/style.css
+++ b/style.css
@@ -273,6 +273,10 @@ div.text2{
 div.text2 p{
 	text-align: left;
 	border-radius: 6px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 .text2 p:visited{
