--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a.active {
 
 .header a {
 	float: left;
-	color: yellow;
+	color: black;
 	text-align: center;
 	padding: 12px;
 	text-decoration: none;
@@ -273,7 +273,6 @@ div.text2{
 
 div.text2 p{
 	text-align: left;
-	border-radius: 6px;
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-top: 10px;
