--- a/style.css
+++ b/style.css
@@ -259,8 +259,6 @@ div.text2{
 	border-radius: 7px;
 	line-height: 1.5;
 	padding: 25px;
-	background-color:#ddd;
-	
 }
 
 .text2 a:visited{
@@ -271,8 +269,6 @@ div.text2{
 .text2 a:hover{
 	background-color: #ddd;
 	color: black;
-	border-radius: 20px;
-	border: 1px solid #777;
 }
 
 div.text2 p{
@@ -281,6 +277,7 @@ div.text2 p{
 	margin-right: 10px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	background: #ddd;
 }
 
 .text2 p:visited{
