--- a/style.css
+++ b/style.css
@@ -5,35 +5,7 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-/*header {
-	padding: 60px;
-	text-align: center;
-	background: #669999;
-	color: #003333;
-	font-size: 30px;
-	margin-left:30px;
-	position:sticky;
-}
-a:link {
-	text-decoration:none;
-	color: black;
-}
 
-a:visited{
-	text-decoration:none;
-	color:black;
-}
-
-a:hover{
-	background-color: #ddd;
-  	color: black;
-}
-
-a.active {
-	background-color: #ddd;
-	color: black;
-}
-*/
 
 .header {
 	overflow: hidden;
@@ -45,7 +17,7 @@ a.active {
 
 .header a {
 	float: left;
-	color: black;
+	color: yellow;
 	text-align: center;
 	padding: 12px;
 	text-decoration: none;
@@ -259,7 +231,7 @@ div.text2{
 	border-radius: 7px;
 	line-height: 1.5;
 	padding: 25px;
-	pointer-events:none;
+	
 }
 
 .text2 a:visited{
