--- a/style.css
+++ b/style.css
@@ -258,9 +258,8 @@ div.text2 p{
 }
 
 .text2 p:hover{
-	/*font-weight: bold;*/
-	text-decoration: none;
-	color: #0B0080;
+	font-weight: bold;
+	color: #black;
 }
 
 div.text{
