--- a/style.css
+++ b/style.css
@@ -53,19 +53,6 @@
 	float: right;
 }
 
-/*
-.footer-right a.active {
-	background-color: #ddd;
-	color: black;
-}
-.footer-right{
-	float: left;
-	display: inline-block;
-	margin-bottom: 10px;
-	margin-top: 10px;
-	padding: 10px 20px;
-}*/
-
 
 .footer-left a.active {
 	background-color: #ddd;
@@ -86,11 +73,7 @@ body{
 	position: relative;
 }
 
-/*body::after {
-  content: '';
-  display: block;
-  height: 60px; 
-}*/
+
 
 h1{
 	color: #081F1F;
@@ -215,12 +198,7 @@ div.popImage {
 	border-radius: 20px;
 }
 
-
-div.artistSection{
-	margin-left:20px;
-	margin-top: 30px;
-	display: inline-block;
-}*/
+*/
 
 div.text2{
   	padding: 10px 20px;	
@@ -239,10 +217,7 @@ div.text2{
 	color:black;
 }
 
-/*.text2 a:hover{
-	background-color: #ddd;
-	color: black;
-}*/
+
 
 div.text2 p{
 	text-align: left;
